--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.9.1",
     "express": "^4.14.1",
+    "express-static-gzip": "^0.2.2",
     "material-design-lite": "^1.3.0",
     "preact": "^7.1.0",
     "preact-compat": "^3.13.1",
@@ -26,6 +27,7 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.22.0",
     "babel-preset-stage-0": "^6.22.0",
+    "compression-webpack-plugin": "^0.3.2",
     "css-loader": "^0.26.1",
     "expect": "^1.20.2",
     "extract-text-webpack-plugin": "^2.0.0-rc.1",
