--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.14.1",
+    "express-static-gzip": "^0.2.2",
     "material-design-lite": "^1.3.0",
     "react": "^0.14.8",
     "react-dom": "^0.14.8",
